Made bootloader user local copy of avrdude.

--- a/rev_f/bootloader/Makefile
+++ b/rev_f/bootloader/Makefile
@@ -286,8 +286,9 @@ OBJCOPY = avr-objcopy
 OBJDUMP = avr-objdump
 SIZE = avr-size
 NM = avr-nm
-AVRDUDE = avrdude
-AVRDUDE = /home/wayne/download/avrdude/trunk/avrdude/avrdude
+#AVRDUDE = avrdude
+#AVRDUDE = /home/wayne/download/avrdude/trunk/avrdude/avrdude
+AVRDUDE = ../avrdude/avrude
 REMOVE = rm -f
 COPY = cp
 WINSHELL = cmd
