--- a/rev_f/bootloader/Makefile
+++ b/rev_f/bootloader/Makefile
@@ -288,7 +288,7 @@ SIZE = avr-size
 NM = avr-nm
 #AVRDUDE = avrdude
 #AVRDUDE = /home/wayne/download/avrdude/trunk/avrdude/avrdude
-AVRDUDE = ../avrdude/avrude
+AVRDUDE = ../avrdude/avrdude
 REMOVE = rm -f
 COPY = cp
 WINSHELL = cmd
